fix: add overflow and postioning on mobile

--- a/scss/6-components/_navigation.scss
+++ b/scss/6-components/_navigation.scss
@@ -20,6 +20,7 @@
     margin: 0;
     list-style-type: none;
     padding: 0;
+    overflow: hidden;
   }
 
   &__list-item {
