--- a/scss/6-components/_navigation_greedy-nav.scss
+++ b/scss/6-components/_navigation_greedy-nav.scss
@@ -123,14 +123,9 @@
   }
 
   &__wrapper {
-    position: relative;
-    visibility: hidden;
-
-    @include cads-media-breakpoint-up(md) {
-      position: absolute;
-      right: 0;
-      height: 100%;
-    }
+    position: absolute;
+    right: 0;
+    height: 100%;
   }
 
   &-is-visible {
